# pke

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
docs/parenting-references/: C-Section Recovery.md  Developmental Milestones.md  Newborn Care Essentials (0-3 Months).md  Postpartum Mental Health.md  Sleep Science for Infants.md
k8s/: namespace.yaml  pke-api.yaml  pke-cron-babybuddy.yaml  qdrant.yaml
pke/: __init__.py  chunk.py  config.py  embed.py
pke/api/: main.py
pke/cli/: main.py
pke/db/: setup.py
pke/ingest/: babybuddy.py  devdocs.py  discord.py  github.py  localcode.py  obsidian.py
pke/sync/: state.py
tests/: test_babybuddy.py  test_chunk.py  test_embed.py  test_localcode.py  test_sync_state.py
